Optimize PWA configuration and performance
Manifest Improvements:
- Updated theme color to blue (#2563eb) for consistency
- Changed short_name to 'Adventure' (shorter for home screen)
- Set orientation to 'any' (supports both portrait and landscape)
- Added maskable icon support for better Android integration
- Updated shortcuts: New Album, Globe, Feed, Search
- Optimized cache headers (1 day cache, 1 week stale-while-revalidate)

Service Worker Optimizations:
- Bumped cache version to v3 (forces cache refresh)
- Extended cache durations for better performance:
  - Static assets: 7 days → 30 days
  - Dynamic pages: 1 day → 6 hours
  - Images: 30 days → 90 days
  - API: 5 minutes → 2 minutes (fresher data)
- Added /feed and /search to dynamic routes cache
- Added manifest.json to static cache
- Improved caching strategy for faster load times

Benefits:
- Faster app startup and page loads
- Better offline support
- Reduced network requests
- Improved user experience on mobile devices
- Feed and Search now accessible via PWA shortcuts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Adventure Log",
-  "short_name": "Adventure Log",
+  "short_name": "Adventure",
   "description": "Track your adventures, organize photos, and visualize your travels on an interactive globe",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ff6b35",
-  "orientation": "portrait-primary",
+  "theme_color": "#2563eb",
+  "orientation": "any",
   "scope": "/",
   "id": "/",
   "icons": [
@@ -39,18 +39,19 @@
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-384x384.png",
       "sizes": "384x384",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ],
   "screenshots": [
@@ -70,7 +71,7 @@
   "shortcuts": [
     {
       "name": "New Album",
-      "short_name": "New Album",
+      "short_name": "Create",
       "description": "Create a new adventure album",
       "url": "/albums/new",
       "icons": [
@@ -95,13 +96,26 @@
       ]
     },
     {
-      "name": "Albums",
-      "short_name": "Albums",
-      "description": "Browse all your albums",
-      "url": "/albums",
+      "name": "Feed",
+      "short_name": "Feed",
+      "description": "View community adventure feed",
+      "url": "/feed",
       "icons": [
         {
           "src": "/icons/shortcut-albums.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Search",
+      "short_name": "Search",
+      "description": "Search adventures and locations",
+      "url": "/search",
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
           "sizes": "96x96",
           "type": "image/png"
         }
