Update PWA short name to AdventureLog
- Changed short_name from 'Adventure' to 'AdventureLog'
- Maintains full branding on home screen
- Updated in both manifest.json and manifest route

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Adventure Log",
-  "short_name": "Adventure",
+  "short_name": "AdventureLog",
   "description": "Track your adventures, organize photos, and visualize your travels on an interactive globe",
   "start_url": "/",
   "display": "standalone",
